# hrpsys-base

idl/: AutoBalancerService.idl  CMakeLists.txt  ImpedanceControllerService.idl  MyControlRTCService.idl  RemoveForceSensorLinkOffsetService.idl  StabilizerService.idl
launch/: samplerobot.launch
python/: hrpsys_config.py
rtc/: CMakeLists.txt
rtc/AutoBalancer/: AutoBalancer.cpp  AutoBalancer.h  CMakeLists.txt  GaitGenerator.cpp  GaitGenerator.h  testGaitGenerator.cpp
rtc/CollisionDetector/: CollisionDetector.cpp  CollisionDetector.h
rtc/ImpedanceController/: ImpedanceController.cpp  ImpedanceController.h  JointPathEx.cpp  JointPathEx.h  JointPathExC.cpp  RatsMatrix.h
rtc/MyControlRTC/: CMakeLists.txt  MyControlRTC.cpp  MyControlRTC.h  MyControlRTC.txt  MyControlRTCComp.cpp  MyControlRTCService_impl.cpp  MyControlRTCService_impl.h
rtc/ReferenceForceUpdater/: ReferenceForceUpdater.cpp
rtc/RemoveForceSensorLinkOffset/: RemoveForceSensorLinkOffset.cpp  RemoveForceSensorLinkOffset.h
rtc/SequencePlayer/: interpolator.cpp
rtc/Stabilizer/: CMakeLists.txt  Stabilizer.cpp  Stabilizer.h  StabilizerService_impl.cpp  StabilizerService_impl.h  ZMPDistributor.h
sample/SampleRobot/: samplerobot_auto_balancer.py  samplerobot_impedance_controller.py  samplerobot_stabilizer.py
sample/euslisp/: eus-joint-path-ex.l
